shift click detection works

--- a/18-adding-inputs.html
+++ b/18-adding-inputs.html
@@ -141,6 +141,14 @@
             }
         })
 
+        //DETECT A SHIFT CLICK
+        $('body').on('mouseup', '.circle', function(event){
+            
+            if (event.shiftKey){
+                console.log('you clicked on a circle while holding shift down');
+            }
+        })
+
 
 
     </script>
