basic features work

--- a/18-mind-map.html
+++ b/18-mind-map.html
@@ -10,6 +10,7 @@
 
         body {
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            min-height: 90vh;
         }
 
         .circle {
@@ -94,6 +95,10 @@
 
         let newCircleID = 1;
 
+        $(document).ready(function(){
+            loadFromLocalStorage();
+        })
+
         //DETECT DOUBLE CLICKS ON THE TEXTAREA DIV
         $('body').on('dblclick', '.textarea', function(){
             $(this).attr('contenteditable', 'true').focus();
@@ -109,8 +114,16 @@
         $('body').on('blur','.textarea', function(){
 
             $(this).attr('contenteditable', 'false');
-            $(this).closest('.circle').draggable();
-        })
+            $(this).closest('.circle').draggable({
+            drag: function (event, ui) {
+                updateLines(this);
+            },
+            stop: function (event, ui) {
+                saveToLocalStorage();
+            }
+        });
+        saveToLocalStorage();
+    })
 
 
         $('body').on('mousedown', '.textarea', function(event){
@@ -136,8 +149,12 @@
             $(myNewCircle).draggable({
                 drag: function (event, ui){
                     updateLines(this);
+                },
+                stop: function(event, ui){
+                    saveToLocalStorage();
                 }
             });
+            saveToLocalStorage();
 
         })
         
@@ -150,6 +167,9 @@
         $('.circle').draggable({
                 drag: function (event, ui){
                     updateLines(this);
+                },
+                stop: function(event, ui){
+                    saveToLocalStorage();
                 }
         });
 
@@ -190,6 +210,7 @@
                 console.log('creating a line now' + this);
 
                 createLine(x1pos, y1pos, x2pos, y2pos, selectedCircleID, clickedCircleID);
+                saveToLocalStorage();
             }
         })
 
@@ -256,6 +277,7 @@
             //console.log($(this).val());
 
             $('.selected').css("background-color", $(this).val());
+            saveToLocalStorage();
 
         })
 
@@ -278,8 +300,117 @@
                 $(this).css({left: newX, top: newY});
 
             })
+            saveToLocalStorage();
         })
 
+        // GET THE NECESSARY DATA FROM EVERY ELEMENT OF THE MIND MAP
+        function extractData(){
+
+            //loop through each circle and push the needed info as an object into an array
+            let circlesData = [];
+            $('.circle').each(function(){
+                const circleID = $(this).attr('id');
+                const circleText = $(this).find('.textarea').text();
+                const circleColor = $(this).css('background-color');
+                const circlePos = $(this).position();
+                const circleWidth = $(this).width();
+                circlesData.push({
+                    id: circleID,
+                    text: circleText,
+                    color: circleColor,
+                    position: circlePos,
+                    width: circleWidth
+                });
+
+            })//end circle each
+
+            //loop through each line
+            let linesData = [];
+            $('.line').each(function(){
+                const lineData = {
+                    circle1: $(this).data('circle1'),
+                    circle2: $(this).data('circle2')
+                };
+
+                linesData.push(lineData);
+
+            });
+
+            return {
+                circles: circlesData,
+                lines: linesData
+            }
+
+
+        } //ending extract data
+
+        //SAVE TO STORAGE:
+        function saveToLocalStorage(){
+            const myData = extractData(); //store the return value of extractData into a variable called myData
+            const jsonData = JSON.stringify(myData);
+            localStorage.setItem('mindMapMakerData', jsonData);
+            localStorage.setItem('latestID', newCircleID);
+        }
+
+        //GET THE CIRCLES AND LINES BACK FROM LOCAL STORAGE
+        function loadFromLocalStorage(){
+            const jsonData = localStorage.getItem('mindMapMakerData');
+            if (!jsonData) return; //quit/exit the function early if there is no data yet
+
+            const theLatestId = localStorage.getItem('latestID');
+            if (!theLatestId) return;
+
+            newCircleID = theLatestId;
+
+            const myData = JSON.parse(jsonData);
+
+            //clear existing elements
+            $('.circle').remove();
+            $('.line').remove();
+
+            myData.circles.forEach(circleData => {
+                //create a new html element for each circle
+            const circle = $(`
+            <div class="circle">
+                <div class="textareaWrap">
+                    <div class="textarea" contenteditable="false">change me</div>
+                </div>  
+            </div>
+            `);
+
+            circle.attr('id', circleData.id);
+            circle.find('.textarea').text(circleData.text);
+            circle.css('background-color', circleData.color);
+            circle.css('left', circleData.position.left + 'px');
+            circle.css('top', circleData.position.top + 'px');
+            circle.width(circleData.width);
+            circle.height(circleData.width);
+            $('body').append(circle);
+            $(circle).draggable({
+                drag: function(event, ui){
+                    updateLines(this);
+                },
+                stop: function(event, ui){
+                    saveToLocalStorage();
+                }
+            });
+
+            }) //end circles for each
+
+            // Recreate lines
+            myData.lines.forEach(lineData => {
+            const circle1 = $('#' + lineData.circle1);
+            const circle2 = $('#' + lineData.circle2);
+
+            const x1Pos = circle1[0].getBoundingClientRect().left + circle1[0].getBoundingClientRect().width / 2;
+            const y1Pos = circle1[0].getBoundingClientRect().top + circle1[0].getBoundingClientRect().height / 2;
+            const x2Pos = circle2[0].getBoundingClientRect().left + circle2[0].getBoundingClientRect().width / 2;
+            const y2Pos = circle2[0].getBoundingClientRect().top + circle2[0].getBoundingClientRect().height / 2;
+
+                createLine(x1Pos, y1Pos, x2Pos, y2Pos, circle1.attr('id'), circle2.attr('id'));
+            });
+
+        }//end load from local storage
 
 
     </script>
