--- a/18-mind-map.html
+++ b/18-mind-map.html
@@ -134,6 +134,16 @@
 
         let newCircleID = 1;
 
+        //LET'S CREATE A NAMED OBJECT FOR ALL THE DRAGGABLE SETTINGS TO AVOID REPETITION
+        const draggableOptions = {
+                drag: function (event, ui){
+                    updateLines(this);
+                },
+                stop: function(event, ui){
+                    saveToLocalStorage();
+                }
+        }
+
         $(document).ready(function(){
             loadFromLocalStorage();
         })
@@ -153,14 +163,7 @@
         $('body').on('blur','.textarea', function(){
 
             $(this).attr('contenteditable', 'false');
-            $(this).closest('.circle').draggable({
-            drag: function (event, ui) {
-                updateLines(this);
-            },
-            stop: function (event, ui) {
-                saveToLocalStorage();
-            }
-        });
+            $(this).closest('.circle').draggable(draggableOptions);
         saveToLocalStorage();
     })
 
@@ -185,14 +188,7 @@
                     height: '20vw'
                 },2000);
             $('body').append(myNewCircle);
-            $(myNewCircle).draggable({
-                drag: function (event, ui){
-                    updateLines(this);
-                },
-                stop: function(event, ui){
-                    saveToLocalStorage();
-                }
-            });
+            $(myNewCircle).draggable(draggableOptions);
             saveToLocalStorage();
 
         })
@@ -203,14 +199,7 @@
             height: '20vw'
         },2000);
 
-        $('.circle').draggable({
-                drag: function (event, ui){
-                    updateLines(this);
-                },
-                stop: function(event, ui){
-                    saveToLocalStorage();
-                }
-        });
+        $('.circle').draggable(draggableOptions);
 
 
         //ADD OR REMOVE THE SELECTED CLASS OF A CIRCLE WHEN IT'S CLICKED
@@ -425,14 +414,7 @@
             circle.width(circleData.width);
             circle.height(circleData.width);
             $('body').append(circle);
-            $(circle).draggable({
-                drag: function(event, ui){
-                    updateLines(this);
-                },
-                stop: function(event, ui){
-                    saveToLocalStorage();
-                }
-            });
+            $(circle).draggable(draggableOptions);
 
             }) //end circles for each
 
